UPDATE! Made the code downward compatible with Java 8.